[package]
name = "slalom-sim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raqote = "0.7.10"
font-kit = "0.5.0"
minifb = "0.15.3"
rand = "0.8.5"
line_intersection = "0.4.0"
geo = "^0.4"
num-traits = "^0.1"